RESOLVED FIXED240719
[GLib] Fix build without ContentExtensions
https://bugs.webkit.org/show_bug.cgi?id=240719
Summary [GLib] Fix build without ContentExtensions
Olivier Blin
Reported 2022-05-20 09:00:30 PDT
Build without ContentExtensions is broken since r241790 because of API::ContentRuleList usage in WebKitUserContent* API files.
Attachments
Olivier Blin
Comment 1 2022-05-20 09:02:19 PDT
EWS
Comment 2 2022-06-27 02:30:07 PDT
Committed 251866@main (8484c9ba1afe): <https://commits.webkit.org/251866@main> Reviewed commits have been landed. Closing PR #834 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.