[GLib] Fix build without ContentExtensions https://bugs.webkit.org/show_bug.cgi?id=240719

Reviewed by Adrian Perez de Castro.

Build without ContentExtensions is broken since r241790 because of
API::ContentRuleList usage in WebKitUserContent* API files.

* Source/WebKit/UIProcess/API/glib/WebKitUserContent.cpp:
(_WebKitUserContentFilter::_WebKitUserContentFilter): Make identifier
conditional and reorder fields to make build checks easier to read
* Source/WebKit/UIProcess/API/glib/WebKitUserContentFilterStore.cpp:
(webkitUserContentFilterStoreConstructed):
(webkit_user_content_filter_store_save):
(webkit_user_content_filter_store_save_from_file):
(webkit_user_content_filter_store_remove):
(webkit_user_content_filter_store_load):
(webkit_user_content_filter_store_fetch_identifiers):
* Source/WebKit/UIProcess/API/glib/WebKitUserContentManager.cpp:
(webkit_user_content_manager_add_filter):
(webkit_user_content_manager_remove_filter):
(webkit_user_content_manager_remove_filter_by_id):
(webkit_user_content_manager_remove_all_filters):

Canonical link: https://commits.webkit.org/251866@main