Source/WebKit/UIProcess/API/glib/WebKitUserContentFilterStore.cpp
@@ -70,15 +70,19 @@ enum {
     PROP_PATH,
 };
 
+#if ENABLE(CONTENT_EXTENSIONS)
 static inline GError* toGError(WebKitUserContentFilterError code, const std::error_code error)
 {
     ASSERT(error);
     return g_error_new_literal(WEBKIT_USER_CONTENT_FILTER_ERROR, code, error.message().c_str());
 }
+#endif
 
 struct _WebKitUserContentFilterStorePrivate {
     GUniquePtr<char> storagePath;
+#if ENABLE(CONTENT_EXTENSIONS)
     RefPtr<API::ContentRuleListStore> store;
+#endif
 };
 
 WEBKIT_DEFINE_TYPE(WebKitUserContentFilterStore, webkit_user_content_filter_store, G_TYPE_OBJECT)
@@ -113,8 +117,10 @@ static void webkitUserContentFilterStoreConstructed(GObject* object)
 {
     G_OBJECT_CLASS(webkit_user_content_filter_store_parent_class)->constructed(object);
 
+#if ENABLE(CONTENT_EXTENSIONS)
     WebKitUserContentFilterStore* store = WEBKIT_USER_CONTENT_FILTER_STORE(object);
     store->priv->store = adoptRef(new API::ContentRuleListStore(FileSystem::stringFromFileSystemRepresentation(store->priv->storagePath.get())));
+#endif
 }
 
 static void webkit_user_content_filter_store_class_init(WebKitUserContentFilterStoreClass* storeClass)
@@ -179,6 +185,7 @@ const char* webkit_user_content_filter_store_get_path(WebKitUserContentFilterSto
     return store->priv->storagePath.get();
 }
 
+#if ENABLE(CONTENT_EXTENSIONS)
 static void webkitUserContentFilterStoreSaveBytes(GRefPtr<GTask>&& task, String&& identifier, GRefPtr<GBytes>&& source)
 {
     size_t sourceSize;
@@ -200,6 +207,7 @@ static void webkitUserContentFilterStoreSaveBytes(GRefPtr<GTask>&& task, String&
             g_task_return_pointer(task.get(), webkitUserContentFilterCreate(WTFMove(contentRuleList)), reinterpret_cast<GDestroyNotify>(webkit_user_content_filter_unref));
     });
 }
+#endif
 
 /**
  * webkit_user_content_filter_store_save:
@@ -231,7 +239,11 @@ void webkit_user_content_filter_store_save(WebKitUserContentFilterStore* store, 
     g_return_if_fail(callback);
 
     GRefPtr<GTask> task = adoptGRef(g_task_new(store, cancellable, callback, userData));
+#if ENABLE(CONTENT_EXTENSIONS)
     webkitUserContentFilterStoreSaveBytes(WTFMove(task), String::fromUTF8(identifier), GRefPtr<GBytes>(source));
+#else
+    g_task_return_new_error(task.get(), WEBKIT_USER_CONTENT_FILTER_ERROR, WEBKIT_USER_CONTENT_FILTER_ERROR_NOT_FOUND, "Content Extensions disabled");
+#endif
 }
 
 /**
@@ -254,10 +266,12 @@ WebKitUserContentFilter* webkit_user_content_filter_store_save_finish(WebKitUser
     return static_cast<WebKitUserContentFilter*>(g_task_propagate_pointer(G_TASK(result), error));
 }
 
+#if ENABLE(CONTENT_EXTENSIONS)
 struct SaveTaskData {
     String identifier;
 };
 WEBKIT_DEFINE_ASYNC_DATA_STRUCT(SaveTaskData)
+#endif
 
 /**
  * webkit_user_content_filter_store_save_from_file:
@@ -285,7 +299,7 @@ void webkit_user_content_filter_store_save_from_file(WebKitUserContentFilterStor
     g_return_if_fail(callback);
 
     GRefPtr<GTask> task = adoptGRef(g_task_new(store, cancellable, callback, userData));
-
+#if ENABLE(CONTENT_EXTENSIONS)
     // Try mapping the file in memory first, and fall-back to reading the contents if that fails.
     if (g_file_is_native(file)) {
         GUniquePtr<char> filePath(g_file_get_path(file));
@@ -316,6 +330,9 @@ void webkit_user_content_filter_store_save_from_file(WebKitUserContentFilterStor
         } else
             g_task_return_error(task.get(), error.release());
     }, task.leakRef());
+#else
+    g_task_return_new_error(task.get(), WEBKIT_USER_CONTENT_FILTER_ERROR, WEBKIT_USER_CONTENT_FILTER_ERROR_NOT_FOUND, "Content Extensions disabled");
+#endif
 }
 
 /**
@@ -361,6 +378,7 @@ void webkit_user_content_filter_store_remove(WebKitUserContentFilterStore* store
     g_return_if_fail(callback);
 
     GRefPtr<GTask> task = adoptGRef(g_task_new(store, cancellable, callback, userData));
+#if ENABLE(CONTENT_EXTENSIONS)
     store->priv->store->removeContentRuleList(String::fromUTF8(identifier), [task = WTFMove(task)](std::error_code error) {
         if (g_task_return_error_if_cancelled(task.get()))
             return;
@@ -371,6 +389,9 @@ void webkit_user_content_filter_store_remove(WebKitUserContentFilterStore* store
         } else
             g_task_return_boolean(task.get(), TRUE);
     });
+#else
+    g_task_return_new_error(task.get(), WEBKIT_USER_CONTENT_FILTER_ERROR, WEBKIT_USER_CONTENT_FILTER_ERROR_NOT_FOUND, "Content Extensions disabled");
+#endif
 }
 
 /**
@@ -416,6 +437,7 @@ void webkit_user_content_filter_store_load(WebKitUserContentFilterStore* store, 
     g_return_if_fail(callback);
 
     GRefPtr<GTask> task = adoptGRef(g_task_new(store, cancellable, callback, userData));
+#if ENABLE(CONTENT_EXTENSIONS)
     store->priv->store->lookupContentRuleList(String::fromUTF8(identifier), [task = WTFMove(task)](RefPtr<API::ContentRuleList> contentRuleList, std::error_code error) {
         if (g_task_return_error_if_cancelled(task.get()))
             return;
@@ -427,6 +449,9 @@ void webkit_user_content_filter_store_load(WebKitUserContentFilterStore* store, 
         } else
             g_task_return_pointer(task.get(), webkitUserContentFilterCreate(WTFMove(contentRuleList)), reinterpret_cast<GDestroyNotify>(webkit_user_content_filter_unref));
     });
+#else
+    g_task_return_new_error(task.get(), WEBKIT_USER_CONTENT_FILTER_ERROR, WEBKIT_USER_CONTENT_FILTER_ERROR_NOT_FOUND, "Content Extensions disabled");
+#endif
 }
 
 /**
@@ -470,6 +495,7 @@ void webkit_user_content_filter_store_fetch_identifiers(WebKitUserContentFilterS
     g_return_if_fail(callback);
 
     GRefPtr<GTask> task = adoptGRef(g_task_new(store, cancellable, callback, userData));
+#if ENABLE(CONTENT_EXTENSIONS)
     store->priv->store->getAvailableContentRuleListIdentifiers([task = WTFMove(task)](WTF::Vector<WTF::String> identifiers) {
         if (g_task_return_error_if_cancelled(task.get()))
             return;
@@ -479,6 +505,9 @@ void webkit_user_content_filter_store_fetch_identifiers(WebKitUserContentFilterS
             result[i] = g_strdup(identifiers[i].utf8().data());
         g_task_return_pointer(task.get(), result, reinterpret_cast<GDestroyNotify>(g_strfreev));
     });
+#else
+    g_task_return_new_error(task.get(), WEBKIT_USER_CONTENT_FILTER_ERROR, WEBKIT_USER_CONTENT_FILTER_ERROR_NOT_FOUND, "Content Extensions disabled");
+#endif
 }
 
 /**
